<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="version_apk">V.4.3.4.0</string>
    <string name="app_name">Self Checkout</string>
    <string name="app_name_splash">Self Checkout…</string>
    <string name="titulo_config">Configurar</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="usuario_requerido">Usuario requerido</string>
    <string name="contrasena_requerido">Contraseña requerida</string>
    <string name="progress_iniciando_sesion">Iniciando sesión…</string>
    <string name="alertaPermisosMemoriaInterna">Para el buen funcionamiento de la aplicación Self Checkout debes conceder los permisos</string>
    <string name="progress_cargando">Cargando…</string>
    <string name="progress_escaneando">Escaneando…</string>
    <string name="progress_anulando">Anulando…</string>
    <string name="la_transaccion_ya_anulada">Esta transacción ya se encuentra anulada.</string>
    <string name="progress_retiro">Comprobando…</string>
    <string name="progress_leyendo">Cargando…</string>
    <string name="opcion_deshabilitada">Opción bloqueada.</string>
    <string name="progress_consultando_cupo_empleado">Consultando cupo empleado…</string>
    <string name="progress_reenviando">Reenviando código…</string>
    <string name="sin_cajas_disponible">La tienda %1$s no tiene cajas disponible.</string>
    <string name="caja_cerrada">La caja %1$s esta cerrada</string>
    <string name="buscar_caja">Buscar caja</string>
    <string name="buscar_ciudad">Buscar ciudad</string>
    <string name="buscar_departamento">Buscar departamento</string>
    <string name="cajas">Cajas tienda %1$s</string>
    <string name="titulo_recomendacion_carga">Información</string>
    <string name="selecciona_n_dispositivo">Seleccione la caja para este dispositivo</string>
    <string name="parametros_no_encontrados">Parámetros no encontrados</string>
    <string name="mensaje_recomendacion_carga">Se estan cargado los parámetros de impresión y pago TEF, Self Checkout se cerrará para terminar de cargar esta configuración.</string>
    <string name="error_crear_directorio">Hubo un problema creando el directorio para guardar el XML configuración, comuniquese con el administrador.</string>
    <string name="error_lectura_parametros">Error en la lectura de los siguientes parametros: %1$s Por favor comuníquese inmediatamente con el administrador.</string>
    <string name="msj_alerta_apertura">La fecha de apertura %1$s de la caja %2$s no corresponde con la fecha del sistema %3$s</string>
    <string name="texto_consulta_cliente_titulo">INGRESE SU NÚMERO DE CÉDULA</string>
    <string name="texto_consulta_cliente">Ingrese su número de cédula y oprime en el botón ingresar</string>
    <string name="et_cedula" translatable="false">Número de cédula</string>
    <string name="tv_titulo_instrucciones">PASO A PASO</string>
    <string name="tv_instruccio_1">1. Ingrese su número de cédula.</string>
    <string name="tv_instruccio_2">2. Pon en el cajón todos los artículos que deseas llevar.</string>
    <string name="tv_instruccio_3">3. Selecciona el medio de pago de su preferencia y listo.</string>
    <string name="btn_cliente_generico">Si no desea usar su documento click aquí</string>
    <string name="btn_consultar_cliente">Ingresar</string>
    <string name="tv_titulo_bienvenido">¡Bienvenido!</string>
    <string name="texto_cerrar_sesion">¿Estás seguro de que deseas cerrar sesión?</string>
    <string name="progress_consultando_cedula">Consultando cédula…</string>
    <string name="progress_consultando_ultima_tef">Consultando…</string>
    <string name="confirmacion_de_datos">Confirmación de datos</string>
    <string name="texto_confirmacion_de_datos">Confirme si los datos que ve en pantalla son correctos, ¿Es usted? Nota: Si no son correctos acérquese a una caja registradora para actualizar sus datos.</string>
    <string name="tv_cedula_cliente">Número de cédula</string>
    <string name="tv_tienda">Tienda</string>
    <string name="tv_caja">Caja</string>
    <string name="tv_nombre_cliente">Nombre</string>
    <string name="tv_celular_cliente">Número de celular</string>
    <string name="tv_correo_cliente">Correo electrónico</string>
    <string name="error_cliente_no_existe">Error, este cliente no se encuentra en CEGID.</string>
    <string name="_cliente">CONSUMIDOR</string>
    <string name="_generico">FINAL</string>
    <string name="ninguno">Ninguno</string>
    <string name="cedula_ciudadania_letra">CC</string>
    <string name="key_intent_cliente">Cliente</string>
    <string name="key_intent_productos">Productos</string>
    <string name="key_intent_descuentos">Descuentos</string>
    <string name="key_intent_factura">Factura</string>
    <string name="key_intent_ultima_tef">Ultima tef</string>
    <string name="key_intent_reconeccion">Reconeccion</string>
    <string name="key_intent_cliente_nuevo">ClienteNuevo</string>
    <string name="crear_cliente">Registrarme</string>
    <string name="sin_registro">Sin registro</string>
    <string name="crear_cliente_confirmar">Confirma que la cédula es: </string>
    <string name="continuar_cliente_generico">Su cédula no se encuentra registrada, ¿Deseas continuar sin datos?. Nota: recuerda que, para registrar sus datos debes acercarse a una caja registradora.</string>
    <string name="info_usar_app">Para usar el sistema de autopago es necesario que continúes sin datos o en su defecto estar registrado, si necesitas más información acérquese a una caja registradora.</string>
    <string name="identificacion_invalida">Número de cédula incorrecto</string>
    <string name="tab_consultaCliente">Consulta</string>
    <string name="tab_compraCliente">Escaneo</string>
    <string name="tab_medioPago">Medio de pago</string>
    <string name="tab_tirilla">Listo</string>
    <string name="configuraciones">Configuración</string>
    <string name="exportacion_perifericos">Seleccione la tienda y la caja para exportar los perifericos</string>
    <string name="selecciona_configuracion">Seleccione una de las siguientes configuraciones</string>
    <string name="aprobacion">Aprobación:</string>
    <string name="seleccione_opcion_tef">Transacción tef (%1$s)</string>
    <string name="texto_seleccione_opcion_tef">¿Desea anular la transacción tef o ver mas información?</string>
    <string name="texto_no_hay_ultimo_pago_tef">No hay ningún ultimo pago registrado.</string>
    <string name="error_caracter_especial_nombre">Tienes problemas con tus datos personales, por favor acércate a una caja registradora y corrige tus datos.</string>
    <string name="titulo_anulacion">Anulación</string>
    <string name="texto_anulacion">Seleccione la transacción TEF que desea anular.</string>
    <string name="hint_recibo">Número de recibo.</string>
    <string name="btn_anular">Anular</string>
    <string name="et_invalido">Ingrese el número del recibo.</string>
    <string name="auto_cerrar_sesion">Un administrador debe autorizar el cierre del SelfCheckout.</string>
    <string name="auto_configurar">Un administrador debe autorizar la configuración del SelfCheckout.</string>
    <string name="autorizacion">Autorización</string>
    <string name="usurio_requerido">Usuario requerido</string>
    <string name="pass_requerido">La contraseña es requerida</string>
    <string name="error_autorizacion_">Error de Autorización:</string>
    <string name="consultando_autorizacion">Autorizando…</string>
    <string name="tipo_usuario_invalido">Usuario y contraseña incorrecto.</string>
    <string name="escaneo_cancelado">Escaneo Cancelado</string>
    <string name="linterna_encendida">Encender Linterna</string>
    <string name="linterna_apagada">Apagar Linterna</string>
    <string name="msj_scan_barcode">Coloque un código de barras dentro del rectángulo del visor para escanearlo.</string>
    <string name="actualizar_cliente">Actualizar datos personales</string>
    <string name="autopago_tiendas">Autopago tiendas</string>
    <string name="cliente_nuevo">Registro</string>
    <string name="btn_continuar">Continuar</string>
    <string name="btn_encerder_rfid">Listo, artículos en el cajón</string>
    <string name="et_cedula_detalle">Nro de identificación</string>
    <string name="btn_generar_qr">Generar QR Bancolombia</string>
    <string name="et_nombre_detalle">Nombres</string>
    <string name="et_apellido_detalle">Apellidos</string>
    <string name="et_fecha_nacimiento_detalle">Fecha de nacimiento</string>
    <string name="et_correo_detalle">Correo electrónico</string>
    <string name="et_celular_detalle">Nro de Celular</string>
    <string name="et_direccion_detalle">Dirección de residencia</string>
    <string name="et_departamento_detalle">Departamento</string>
    <string name="texto_tipo_documento">Tipo de documento</string>
    <string name="et_ciudad_detalle">Ciudad</string>
    <string name="rb_genero_masculino">Masculino</string>
    <string name="rb_genero_femenino">Femenino</string>
    <string name="tv_seleccione_departamento">Seleccione el departamento</string>
    <string name="tv_seleccione_ciudad">Seleccione la ciudad</string>
    <string name="tv_titulo_genero">Género</string>
    <string name="tv_titulo_fecha_nacimiento">Fecha de nacimiento</string>
    <string name="texto_sin_autorizacion">Debes autorizar el uso y tratamiento de datos para continuar</string>
    <string name="autorizacion_datos_personales">Autorizo a Crystal S.A.S el uso y tratamiento de mis datos personales</string>
    <string name="seleccione_tipo_documento">Seleccione el tipo de documento</string>
    <string name="registro_nombre_requerido">Ingrese su nombre</string>
    <string name="registro_apellido_requerido">Ingrese su apellido</string>
    <string name="registro_fecha_nacimiento_requerido">Ingrese su fecha de nacimiento</string>
    <string name="registro_fecha_nacimiento_requerido_valida">Ingrese una fecha de nacimiento valida</string>
    <string name="registro_fecha_nacimiento_requerido_valido">Debes tener mas de 15 años</string>
    <string name="registro_correo_y_celular_requerido">Ingrese su correo electrónico o su celular</string>
    <string name="registro_correo_requerido_valido">Ingrese un correo electrónico valido</string>
    <string name="registro_celular_requerido">Ingrese su número de celular</string>
    <string name="registro_celular_requerido_valido">Ingrese un número de celular valido</string>
    <string name="registro_direccion_requerido">Ingrese su dirección de residencia</string>
    <string name="btn_reiniciar">Ingresar otra cédula</string>
    <string name="btn_regresar">Regresar</string>
    <string name="animacion_flecha_derecha_azul">animation_flecha_derecha_azul.json</string>
    <string name="btn_finalizar">Finalizar compra</string>
    <string name="texto_finalizar_qr_bancolombia">Una vez escaneado el QR, finaliza la compra</string>
    <string name="title_qr_dialogfragment">Paga desde tu celular</string>
    <string name="message_qr_dialogfragment">Escanea desde la app de su banco</string>
    <string name="tv_texto_codigo">Código</string>
    <string name="btn_verificar_codigo">Verificar Código</string>
    <string name="tv_texto_helper_codigo">Ingrese el código aquí y luego pulsa el botón (Verificar código)</string>
    <string name="btn_reenviar_codigo">Reenviar Código</string>
    <string name="texto_dialog_verificacion">Por favor introduce el código de verificación enviado al (%1$s)
        o a el correo electrónico (%2$s).</string>
    <string name="si_continuar">Sí, continuar</string>
    <string name="no">No</string>
    <string name="entendido">Entendido</string>
    <string name="info_cajon">RETIRA LOS GANCHOS E INTRODUCE TODOS LOS ARTÍCULOS EN EL CAJÓN</string>
    <string name="info_cajon_ganchos">CAJÓN GANCHOS</string>
    <string name="info_cajon_ropa">CAJÓN PRENDAS</string>
</resources>