<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clClienteConsulta"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.crystal.selfcheckoutapp.Vista.dialogfragment.VistaClienteGenericoDialogFragment">

    <ImageView
        android:id="@+id/ivCloseConsultaClienteG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/vector_cerrar_negro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivClienteGenerico"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/usuario_consulta2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCloseConsultaClienteG" />

    <TextView
        android:id="@+id/tvTituloConsultaClienteG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/sin_registro"
        android:textColor="@color/color_texto"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivClienteGenerico" />

    <TextView
        android:id="@+id/tvTextoConsultaCliente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/continuar_cliente_generico"
        android:textColor="@color/color_texto"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTituloConsultaClienteG" />

    <Button
        android:id="@+id/btnSiContinuar"
        style="@style/fuente"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_verde"
        android:elevation="4dp"
        android:text="@string/si_continuar"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvTextoConsultaCliente"
        app:layout_constraintStart_toStartOf="@+id/tvTextoConsultaCliente"
        app:layout_constraintTop_toBottomOf="@+id/tvTextoConsultaCliente" />

    <Button
        android:id="@+id/btnNoContinuar"
        style="@style/fuente"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rounded_button_blanco"
        android:elevation="4dp"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textColor="@color/color_texto"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSiContinuar"
        app:layout_constraintStart_toStartOf="@+id/btnSiContinuar"
        app:layout_constraintTop_toBottomOf="@+id/btnSiContinuar" />

</androidx.constraintlayout.widget.ConstraintLayout>
