<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvLeerOtraCedula"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:visibility="gone"
        android:drawableStart="@drawable/flecha_izquierda"
        android:text="@string/btn_reiniciar"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvInfoCajon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/info_cajon"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/vdfc_titulo_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCerrarCajon" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationInicio"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:rotation="90"
        app:layout_constraintEnd_toEndOf="@+id/ivCajon"
        app:layout_constraintStart_toStartOf="@+id/ivCajon"
        app:layout_constraintTop_toTopOf="@+id/ivCajon"
        app:lottie_autoPlay="true"
        app:lottie_fileName="@string/animacion_flecha_derecha_azul"
        app:lottie_loop="true"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivCajon"
        android:layout_width="@dimen/vdfc_width_imagen_size"
        android:layout_height="@dimen/vdfc_height_imagen_size"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cajon_vacio_512"
        app:layout_constraintEnd_toStartOf="@+id/glSeparadorImagenes"
        app:layout_constraintStart_toStartOf="@+id/tvInfoCajon"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoCajon" />

    <TextView
        android:id="@+id/tvInfoCajonGanchos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/info_cajon_ganchos"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/vdfc_titulo_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivCajon"
        app:layout_constraintStart_toStartOf="@+id/ivCajon"
        app:layout_constraintTop_toBottomOf="@+id/ivCajon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glSeparadorImagenes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintGuide_percent="0.5" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimationInicio2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="@+id/ivCajon2"
        app:layout_constraintStart_toStartOf="@+id/ivCajon2"
        app:layout_constraintTop_toTopOf="@+id/ivCajon2"
        app:lottie_autoPlay="true"
        app:lottie_fileName="@string/animacion_flecha_derecha_azul"
        app:lottie_loop="true"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/ivCajon2"
        android:layout_width="@dimen/vdfc_width_imagen_size"
        android:layout_height="@dimen/vdfc_height_imagen_size"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/cajon_vacio_512"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glSeparadorImagenes"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoCajon" />

    <TextView
        android:id="@+id/tvInfoCajonRopa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/info_cajon_ropa"
        android:textColor="@color/color_texto"
        android:textSize="@dimen/vdfc_titulo_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/ivCajon2"
        app:layout_constraintStart_toStartOf="@+id/ivCajon2"
        app:layout_constraintTop_toBottomOf="@+id/ivCajon2" />

    <Button
        android:id="@+id/btnEncenderRFID"
        style="@style/fuente"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button_verde"
        android:elevation="4dp"
        android:text="@string/btn_encerder_rfid"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoCajonRopa" />

    <ImageView
        android:id="@+id/ivCerrarCajon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/vector_cerrar_negro"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>